--- a/styles/style.css
+++ b/styles/style.css
@@ -163,6 +163,8 @@ body {
   font-weight: 600;
   line-height: 120%;
   margin-bottom: 1rem;
+  max-width: 300px;
+  overflow-wrap: break-word;
 }
 .active__descr {
   font-size: 16px;
