--- a/styles/style.scss
+++ b/styles/style.scss
@@ -17,7 +17,7 @@ body {
     justify-content: center;
     align-items: center;
     .input {
-        margin-bottom: 100px;
+        margin-bottom: 50px;
         display: flex;
         flex-direction: column;
         justify-content: center;
@@ -72,39 +72,45 @@ body {
     }
 }
 .task {
+    padding-left: 100px;
+    padding-right: 100px;
     &__cont {
         display: grid;
-        grid-template-columns: repeat(4, 1fr);
+        grid-template-columns: repeat(1, 8fr);
         grid-auto-rows: auto;
-        grid-gap: 40px;
+        grid-gap: 25px;
     }
 }
 .active {
-    padding: 10px;
+    display: inline-flex;
+    justify-content: space-between;
+    padding: 10px 20px;
     background-color: rgb(84, 207, 115);
     border-radius: 20px;
+    transition: opacity 0.5s, background-color 0.3s;
     &__title {
         font-size: 18px;
         font-weight: 600;
         line-height: 120%;
-        margin-bottom: 1rem;
         max-width: 300px;
         overflow-wrap: break-word;
     }
-    &__descr{
-        font-size: 16px;
-        line-height: 120%;
-        margin-bottom: 1rem;
+    &__complete {
+        margin-left: 0 auto;
     }
-    &__completed {
-        display: inline-flex;
-        justify-content: center;
-        align-items: center;
-        margin-right: 5px;
-        &-text {
-            display: inline-flex;
-            justify-content: center;
-            align-items: center;
+    &__remove {
+        padding: 5px;
+        background-color: rgb(190, 71, 71);
+        border-radius: 10px;
+        color: white;
+        transition: background-color 0.3s, color 0.3s;
+        &:hover {
+            background-color: rgba(209, 26, 26, 0.644);
+            color: #000;
         }
+    }
+    &.checked {
+        background-color: rgb(59, 146, 81);
+        opacity: 0.6;
     }
 }
